--- a/contact-me.html
+++ b/contact-me.html
@@ -3,22 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact-me</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h1>My Contact Details</h1>
+ <center>  <h1>My Contact Details</h1>
    <h4> Email me : adammahjoubi12@gmail.com</h4>
        <h4>My Number : 0777724312</h4>
        <h4> facebook : adaammahjoubi</h4>
        <form  class="" action="mailto:adammahhoubi12@gmail.com" method="post" enctype="text/plain">
-    <hr size="3" noshade="" color="black" >
-        <label>Your Name:</label>
+    <hr>
+       <label>Your Name:</label>
 <input type="text" name="Your Name" >
 <br><LAbel>Your Email:</LAbel>
 <input type="email" name="Your Email"><br>
-
+<hr>
 <br><label> Your Message: </label><br>
 <br><textarea name="Your Message" id="" cols="30" rows="10"></textarea>
-<br><input type="submit" name="" >
+<br><input type="submit" name="" ></center>
 
 </form>
 
