--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
    
     <title>Adam Personnel website</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <table cellspacing = "20">
@@ -14,23 +15,12 @@
             <p><em><strong>Student at Takadoum</strong></em> </p>
             <p>Hi, Adam here welcome to my website . I'm a student and I love coding </p></td>
         </tr> </table>
-        <hr size="3 " noshade="" color="black">
-        <CEnter><ul><h2>My Hobies </h2> </ul>
+        <hr>
+        <CEnter><ul><h2>My Story </h2> </ul>
 
-       <table cellspacing= "20">
-            <tr>
-            <td><h3>Playign football</h3> </td>
-            <td> ⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-    <td><h3>Playing Baskettball</h3></td>
-            <td>⭐⭐⭐</td>
-            </tr>
-            <tr><td><h3>coding</h3></td>
-            <td>⭐⭐</td>
-            </tr>
-            </table > 
-        <hr size="3 " noshade="" color="black">
+       <p>Hi there my name's adam , I'm student and also I'm a code learner I have pation to code and I love what I'm doing, I live in fes specificly in Ain chkef , I enjoy playing football and video games, this is my personnel web site , I hope you like it .
+           Questions? live it below </p>
+        <hr>
         <h2><a href="contact-me.html">Contact Me</a></h2>
         <form  class="" action="index.html" method="post"></form>
 <label for="Your Name"></label>
